--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-web-monetization": "0.0.13",
+    "react-web-monetization-ui": "^0.2.3",
+    "react-webmonetization-meta": "0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
